2009-07-05 15:34  rsbivand

	* DESCRIPTION, R/SpatialLines-methods.R, R/spsample.R,
	  man/SpatialLines.Rd, src/gcdist.c, src/init.c, src/sp.h: zero
	  length line issue in spsample

2009-05-28 15:00  edzer

	* R/image.R, man/image.Rd: added attr=1 argument to
	  as.image.SpatialGridDataFrame

2009-05-28 08:09  edzer

	* DESCRIPTION, tests/fail1.Rout.save, tests/spplot.Rout.save:
	  version update; minor test output changes

2009-05-27 22:39  edzer

	* R/SpatialGridDataFrame-methods.R: change request by BDR,
	  involving named arguments in [.data.frame

2009-04-29 13:37  rsbivand

	* DESCRIPTION, R/spdists.R, ChangeLog, inst/ChangeLog: typos in
	  spDistsN1 messages

2009-04-23 13:06  rsbivand

	* NAMESPACE, ChangeLog, inst/ChangeLog: adding dim for remaining
	  Spatial*DataFrame classes

2009-04-23 12:57  rsbivand

	* DESCRIPTION, R/SpatialGridDataFrame-methods.R,
	  R/SpatialLinesDataFrame-methods.R,
	  R/SpatialPolygonsDataFrame-methods.R,
	  man/SpatialGridDataFrame-class.Rd,
	  man/SpatialLinesDataFrame-class.Rd,
	  man/SpatialPixelsDataFrame-class.Rd,
	  man/SpatialPolygonsDataFrame-class.Rd: adding dim for remaining
	  Spatial*DataFrame classes

2009-03-31 14:12  rsbivand

	* DESCRIPTION, R/overlay.R, ChangeLog, inst/ChangeLog: overlay
	  points on grid rownames problem

2009-03-05 10:54  edzer

	* man/mapasp.Rd: missing bracket

2009-02-26 18:03  rsbivand

	* ChangeLog, inst/ChangeLog: spsample and gridded polygons

2009-02-26 17:33  rsbivand

	* R/spsample.R: spsample and gridded polygons

2009-02-26 12:59  rsbivand

	* DESCRIPTION, R/spsample.R: spsample and gridded polygons

2009-02-20 12:02  edzer

	* R/zerodist.R, tests/zerodist.R, tests/zerodist.Rout.save:
	  zerodist test includes unique.ID argument

2009-02-20 11:08  edzer

	* R/zerodist.R, man/zerodist.Rd: added the unique.ID argument to
	  zerodist

2009-02-19 15:02  edzer

	* R/spplot.R: spplot of logical variables did not work

2009-02-19 14:21  edzer
