@@ -84,11 +84,6 @@ sample.Line = function(x, n, type, offset = runif(1), proj4string = CRS(as.chara
 	if (missing(n)) n <- as.integer(NA)
 	if (!is.finite(n) || n < 1) return(NULL)
 	cc = coordinates(x)
-#	dxy = apply(cc, 2, diff)
-#	if (inherits(dxy, "matrix"))
-#		lengths = apply(dxy, 1, function(x) sqrt(sum(x ** 2)))
-#	else # cc has 2 rows:
-#		lengths = sqrt(sum(dxy ** 2))
         lengths = LineLength(cc, longlat=FALSE)
         if (any(abs(lengths) < .Machine$double.eps)) {
 	    wl <- which(abs(lengths) < .Machine$double.eps)
